[gd_scene load_steps=4 format=3 uid="uid://df1siam7f2i50"]

[ext_resource type="Script" path="res://SoundBut.gd" id="1_667bt"]
[ext_resource type="PackedScene" uid="uid://xe0h38e74s6q" path="res://Scenes/audio_stream_player.tscn" id="2_u12al"]
[ext_resource type="Script" path="res://Scenes/uku_alterator.gd" id="4_7uluk"]

[node name="SoundBut" type="TextureRect"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -1820.0
offset_bottom = -980.0
script = ExtResource("1_667bt")

[node name="AudioStreamPlayer" parent="." instance=ExtResource("2_u12al")]

[node name="Alterator" type="Node" parent="."]
script = ExtResource("4_7uluk")

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
